# wood-game

client/: Cargo.toml  README.md  index.html  run_wasm.sh
client/resources/: custom.ron  game_ui.ron  input.ron  inventory.ron  menu.ron
client/resources/sprites/: roguelikeSheet.ron  tree.ron
client/src/: animation.rs  bevy_components.rs  bevy_init.rs  bundle.rs  components.rs  desktop_network.rs  game.rs  general_network.rs  gui.rs  lib.rs  main.rs  main_menu.rs  network.rs  rltk_main.rs  runstate.rs  state.rs  wasm_network.rs
client/src/bevy_systems/: animate_sprite_system.rs  build_request_system.rs  build_ui_system.rs  button_system.rs  camera_system.rs  interaction_request_system.rs  interaction_ui_system.rs  inventory_ui_system.rs  main_ui_system.rs  map_system.rs  mod.rs  movement_system.rs  player_input_system.rs  text_info_ui_system.rs  update_player_system.rs
client/src/bevy_systems/ui_systems/: build_ui_system.rs  craft_ui_system.rs  interaction_ui_system.rs  inventory_ui_system.rs  main_ui_system.rs  mod.rs  text_info_ui_system.rs  ui_bases.rs
client/src/network/: desktop_network.rs  general_network.rs  mod.rs  wasm_network.rs
client/src/rltk_front/: gui.rs  mod.rs  rltk_main.rs  runstate.rs
client/src/systems/: animate_sprite_system.rs  build_request_system.rs  build_ui_system.rs  camera_player_move_system.rs  camera_system.rs  deserialise_system.rs  input_system.rs  interaction_request_system.rs  interaction_ui_system.rs  inventory_ui_system.rs  map_system.rs  mod.rs  movement_system.rs  player_input_system.rs
client/src/systems/ui_systems/: action_bar_ui_system.rs  inventory_uiv2_system.rs  mod.rs
server/: Cargo.toml  README.md
server/raws/: spawns.json
server/src/: atomic_funtions.rs  birth.rs  components.rs  cow_ai_system.rs  eating_system.rs  gamelog.rs  gui.rs  interaction_system.rs  inventory_system.rs  local_player.rs  main.rs  map.rs  map_indexing_system.rs  movement_system.rs  object_deleter.rs  player.rs  random_table.rs  saveload_system.rs  spawner.rs  tiletype.rs  trigger_system.rs  vegetable_grow_system.rs  visibility_system.rs
server/src/ai/: approach_ai_system.rs  carnivorous_ai_system.rs  cow_ai_system.rs  default_move_system.rs  eating_ai.rs  flee_ai_system.rs  mod.rs  monster_ai_system.rs  omnivore_ai_system.rs  seach_parter_ai.rs  targeting_ai.rs
server/src/algo/: astar.rs  djikskra.rs  math_perso.rs  mod.rs
server/src/data_representation/: genealogy.rs  general_log.rs  mod.rs  world_log.rs
server/src/network/: message.rs  mod.rs  sockets.rs
server/src/raws/: ingame_spawner.rs  item_structs.rs  mod.rs  prop_structs.rs  rawmaster.rs
server/src/systems/: action_point_systeme.rs  action_system.rs  aging_system.rs  block_unblock_system.rs  building_system.rs  check_death_system.rs  consume_system.rs  craft_system.rs  date_system.rs  death_system.rs  destroy_system.rs  eating_system.rs  energy_system.rs  equip_system.rs  equippmemt_bonus_system.rs  food_preference_system.rs  gendered_reproduction_system.rs  go_by_step.rs  go_target_system.rs  horde_system.rs  humidity_sensitivity_system.rs  humidity_system.rs  id_to_entity_interface_matching.rs  in_player_view_system.rs  interaction_system.rs  interactionv2_system.rs  melee_combat_system.rs  mod.rs  named_counter.rs  named_counter_system.rs  object_spawn_system.rs  online_player_system.rs  player_command_system.rs  player_info_system.rs  player_json_system.rs  prop_spawner_system.rs  respawn_system.rs  send_map_system.rs  solo_reproduction_system.rs  specie_system.rs  (+7 more)
