[package]
name = "client"
version = "0.1.0"
authors = ["elliosson <elliasss@laposte.net>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
rltk = { version = "0.5.17" }
specs = "0.15.0"
specs-derive = "0.4.0"
uuid = { version = "0.7", features = ["v4"] }
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
bevy_egui = "0.6"
wasm-bindgen = "0.2.58"
instant = "0.1"

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
web-sys = {version = "0.3.22", features = [
  "ErrorEvent",
  "MessageEvent",
  "WebSocket",
  "console",]}
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"
instant = { version = "0.1", features = [ "stdweb" ] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = "0.5.0"
websocket = "0.24.0"

