[package]
name = "roguelike_project"
version = "0.1.0"
authors = ["Elliosson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { rltk = "~0.5.17", features = ["serialization"] }
specs = { version = "0.15.0", features = ["serde"] }
specs-derive = "0.4.0"
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
lazy_static = "1.4.0"
cpuprofiler = "0.0.2"
rand = "0.7.3"

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
web-sys = { version = "0.3", features=["console"] }
wasm-bindgen = "0.2"

[profile.release]
debug = true



 